--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "node -r dotenv/config . dotenv_config_path=.env.test",
-        "start": "node -r dotenv/config . dotenv_config_path=.env.production"
+        "start": "node ."
     },
     "author": "StarkzxP1",
     "license": "ISC",
     "dependencies": {
         "adm-zip": "^0.5.13",
         "axios": "^1.7.2",
-        "dotenv": "^16.4.5",
         "fs-extra": "^11.2.0",
         "node-fetch-commonjs": "^3.3.2",
         "prompt-sync": "^4.2.0"
